# mcp-ssh-nas

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
src/mcp_ssh_nas/: __init__.py  client.py  config.py  langchain_tools.py  server.py
src/mcp_ssh_nas/operations/: __init__.py  docker.py  exec.py  files.py  services.py  system.py
tests/: test_langchain_tools.py  test_operations.py
