[project]
name = "mcp-ssh-nas"
version = "0.1.0"
description = "SSH NAS operations as Python library, LangChain tools, and MCP server"
requires-python = ">=3.10"
dependencies = ["paramiko>=3.0.0", "pydantic-settings>=2.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
langchain = ["langchain-core>=0.2.0", "pydantic>=2.0.0"]
all = ["fastmcp>=2.0.0", "langchain-core>=0.2.0", "pydantic>=2.0.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
mcp-ssh-nas = "mcp_ssh_nas.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ssh_nas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
